--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,25 @@
 # MongoDB and Data Processing
-pymongo==4.6.1
-dnspython==2.4.2
+pymongo>=4.0.0,<5.0.0
+dnspython>=2.0.0
 
 # Data Analysis and Manipulation
-pandas==2.1.4
-numpy==1.26.2
+pandas>=2.0.0
+numpy>=1.24.0
 
 # Visualization
-matplotlib==3.8.2
-seaborn==0.13.0
-plotly==5.18.0
-wordcloud==1.9.3
+matplotlib>=3.7.0
+seaborn>=0.12.0
+plotly>=5.0.0
+wordcloud>=1.9.0
 
 # NLP and Text Processing
-scikit-learn==1.3.2
-nltk==3.8.1
-spacy==3.7.2
+scikit-learn>=1.3.0
+nltk>=3.8.0
 
 # Streamlit Dashboard
-streamlit==1.29.0
-streamlit-folium==0.15.1
-folium==0.15.1
-
-# Jupyter Notebook
-jupyter==1.0.0
-ipykernel==6.27.1
-ipywidgets==8.1.1
+streamlit>=1.29.0
+streamlit-folium>=0.15.0
+folium>=0.15.0
 
 # Additional utilities
-python-dotenv==1.0.0
+python-dotenv>=1.0.0
